fixed minor issue with tooltip displaying behind button

--- a/src/style.css
+++ b/src/style.css
@@ -58,7 +58,6 @@ h1 {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  position: relative;
 }
 
 .logo {
